# ambition

./: meson.build  meson_options.txt  techstack.md  techstack.yml
lib/: Action.vala  ActionBuilder.vala  ActionMethod.vala  Actions.vala  App.vala  Application.vala  Build.vala  Component.vala  Config.vala  Cookie.vala  Dispatcher.vala  DispatcherUtils.vala  HttpMethod.vala  IActionFilter.vala  Logger.vala  Request.vala  RequestFile.vala  Response.vala  Result.vala  Stash.vala  State.vala  TemplateCompiler.vala  meson.build
lib/Authorization/: Authorize.vala  Builder.vala  IAuthorizer.vala  IPasswordType.vala  IUser.vala
lib/Authorization/Authorizer/: Flat.vala  Htpasswd.vala
lib/Authorization/PasswordType/: Hashed.vala  MD5.vala  SHA1.vala  SHA256.vala
lib/Authorization/User/: Flat.vala  Htpasswd.vala
lib/Controller/: Static.vala
lib/CoreView/: File.vala  JSON.vala  None.vala  RawString.vala  Redirect.vala  Template.vala
lib/Engine/: Base.vala  Raw.vala  Test.vala
lib/Form/: Button.vala  CheckboxGroupInput.vala  FieldRenderer.vala  FormDefinition.vala  GroupInput.vala  HiddenInput.vala  PasswordInput.vala  RadioGroupInput.vala  ResetButton.vala  SelectGroupInput.vala  SubmitButton.vala  Tag.vala  TextInput.vala  Textarea.vala  Validator.vala
lib/Plugin/: HttpPluginService.vala  IPluginService.vala  LocalPluginService.vala  PluginManifest.vala  PluginResult.vala
lib/PluginSupport/: IPlugin.vala  PluginLoader.vala
lib/Session/: IStorable.vala  Interface.vala  SessionPlugin.vala  StorableFile.vala  StorableMemory.vala
lib/Testing/: AbstractTestCase.vala  Helper.vala  TestResponse.vala
lib/Utility/: Clean.vala  Creator.vala  IUtility.vala  Monitor.vala  Plugin.vala  Run.vala  Scaffold.vala  ScaffoldManifest.vala  Utility.vala  UtilityLoader.vala
share/: meson.build
src/: Binary.vala  Shell.vala  meson.build
test/: meson.build  pluginloader.vala  pluginmanifest.vala  test-runner.vala
