project(
    'Ambition','vala', 'c',
    version: '0.1',
)

dependencies = [
    dependency('glib-2.0', version: '>=2.32'),
    dependency('gee-0.8'),
    dependency('gio-2.0'),
    dependency('json-glib-1.0'),
    dependency('gmodule-2.0'),
    dependency('libsoup-2.4'),
    dependency('log4vala-0.2'),
]
